YETUS-992. Create and publish a github action (2nd)

--- a/action.yml
+++ b/action.yml
@@ -58,7 +58,7 @@ inputs:
     default: kill
 runs:
   using: 'docker'
-  image: apache/yetus:main
+  image: docker://apache/yetus:main
   args:
     - test-patch
     - --basedir=${{ inputs.basedir }}
