YETUS-1154. Clean-up some build issues now that JDK8 has been removed

--- a/action.yml
+++ b/action.yml
@@ -87,6 +87,7 @@ runs:
     - --github-token=${{ inputs.githubtoken }}
     - --html-report-file=${{ inputs.patchdir }}/report.html
     - --ignore-unknown-options=true
+    - --java-home=${{ inputs.javahome }}
     - --junit-report-xml=${{ inputs.patchdir }}/junit-report.xml
     - --patch-dir=${{ inputs.patchdir }}
     - --plugins=${{ inputs.plugins }}
